--- a/.deps/lb.Po
+++ b/.deps/lb.Po
@@ -1,146 +1,222 @@
-lb.o: lb.c config.h /usr/include/stdio.h /usr/include/sys/cdefs.h \
-  /usr/include/sys/_symbol_aliasing.h \
-  /usr/include/sys/_posix_availability.h /usr/include/Availability.h \
-  /usr/include/AvailabilityInternal.h /usr/include/_types.h \
-  /usr/include/sys/_types.h /usr/include/machine/_types.h \
-  /usr/include/i386/_types.h /usr/include/secure/_stdio.h \
-  /usr/include/secure/_common.h /usr/include/fcntl.h \
-  /usr/include/sys/fcntl.h /usr/include/stdlib.h /usr/include/sys/wait.h \
-  /usr/include/sys/signal.h /usr/include/sys/appleapiopts.h \
-  /usr/include/machine/signal.h /usr/include/i386/signal.h \
-  /usr/include/i386/_structs.h /usr/include/sys/_structs.h \
-  /usr/include/machine/_structs.h /usr/include/mach/i386/_structs.h \
-  /usr/include/sys/resource.h /usr/include/machine/endian.h \
-  /usr/include/i386/endian.h /usr/include/sys/_endian.h \
-  /usr/include/libkern/_OSByteOrder.h \
-  /usr/include/libkern/i386/_OSByteOrder.h /usr/include/alloca.h \
-  /usr/include/machine/types.h /usr/include/i386/types.h \
-  /usr/include/unistd.h /usr/include/sys/unistd.h \
-  /usr/include/sys/select.h /usr/include/sys/_select.h \
-  /usr/include/getopt.h /usr/include/string.h /usr/include/strings.h \
-  /usr/include/secure/_string.h /usr/include/sys/types.h \
-  /usr/include/sys/time.h /usr/include/time.h /usr/include/_structs.h \
-  /usr/include/sys/stat.h /usr/include/signal.h /usr/include/errno.h \
-  /usr/include/sys/errno.h /usr/include/inttypes.h \
-  /usr/bin/../lib/clang/4.2/include/stdint.h /usr/include/stdint.h \
-  /usr/include/ctype.h /usr/include/runetype.h /usr/include/regex.h \
-  /usr/bin/../lib/clang/4.2/include/stdarg.h /usr/include/math.h \
-  /usr/include/sys/mman.h
+lb.o: lb.c config.h /usr/include/stdio.h /usr/include/features.h \
+  /usr/include/stdc-predef.h /usr/include/i386-linux-gnu/sys/cdefs.h \
+  /usr/include/i386-linux-gnu/bits/wordsize.h \
+  /usr/include/i386-linux-gnu/gnu/stubs.h \
+  /usr/include/i386-linux-gnu/gnu/stubs-32.h \
+  /usr/bin/../lib/clang/3.4/include/stddef.h \
+  /usr/include/i386-linux-gnu/bits/types.h \
+  /usr/include/i386-linux-gnu/bits/typesizes.h /usr/include/libio.h \
+  /usr/include/_G_config.h /usr/include/wchar.h \
+  /usr/bin/../lib/clang/3.4/include/stdarg.h \
+  /usr/include/i386-linux-gnu/bits/stdio_lim.h \
+  /usr/include/i386-linux-gnu/bits/sys_errlist.h /usr/include/fcntl.h \
+  /usr/include/i386-linux-gnu/bits/fcntl.h \
+  /usr/include/i386-linux-gnu/bits/fcntl-linux.h /usr/include/time.h \
+  /usr/include/i386-linux-gnu/bits/stat.h /usr/include/stdlib.h \
+  /usr/include/i386-linux-gnu/bits/waitflags.h \
+  /usr/include/i386-linux-gnu/bits/waitstatus.h /usr/include/endian.h \
+  /usr/include/i386-linux-gnu/bits/endian.h \
+  /usr/include/i386-linux-gnu/bits/byteswap.h \
+  /usr/include/i386-linux-gnu/bits/byteswap-16.h \
+  /usr/include/i386-linux-gnu/sys/types.h \
+  /usr/include/i386-linux-gnu/sys/select.h \
+  /usr/include/i386-linux-gnu/bits/select.h \
+  /usr/include/i386-linux-gnu/bits/sigset.h \
+  /usr/include/i386-linux-gnu/bits/time.h \
+  /usr/include/i386-linux-gnu/sys/sysmacros.h \
+  /usr/include/i386-linux-gnu/bits/pthreadtypes.h /usr/include/alloca.h \
+  /usr/include/i386-linux-gnu/bits/stdlib-float.h /usr/include/unistd.h \
+  /usr/include/i386-linux-gnu/bits/posix_opt.h \
+  /usr/include/i386-linux-gnu/bits/environments.h \
+  /usr/include/i386-linux-gnu/bits/confname.h /usr/include/getopt.h \
+  /usr/include/string.h /usr/include/xlocale.h \
+  /usr/include/i386-linux-gnu/sys/wait.h /usr/include/signal.h \
+  /usr/include/i386-linux-gnu/bits/signum.h \
+  /usr/include/i386-linux-gnu/bits/siginfo.h \
+  /usr/include/i386-linux-gnu/bits/sigaction.h \
+  /usr/include/i386-linux-gnu/bits/sigcontext.h \
+  /usr/include/i386-linux-gnu/bits/sigstack.h \
+  /usr/include/i386-linux-gnu/sys/ucontext.h \
+  /usr/include/i386-linux-gnu/bits/sigthread.h \
+  /usr/include/i386-linux-gnu/sys/time.h \
+  /usr/include/i386-linux-gnu/sys/stat.h /usr/include/errno.h \
+  /usr/include/i386-linux-gnu/bits/errno.h /usr/include/linux/errno.h \
+  /usr/include/i386-linux-gnu/asm/errno.h \
+  /usr/include/asm-generic/errno.h /usr/include/asm-generic/errno-base.h \
+  /usr/include/inttypes.h /usr/bin/../lib/clang/3.4/include/stdint.h \
+  /usr/bin/../lib/gcc/i686-linux-gnu/4.8/include/stdint.h \
+  /usr/include/stdint.h /usr/include/i386-linux-gnu/bits/wchar.h \
+  /usr/include/ctype.h /usr/include/regex.h \
+  /usr/include/i386-linux-gnu/gnu/option-groups.h /usr/include/math.h \
+  /usr/include/i386-linux-gnu/bits/huge_val.h \
+  /usr/include/i386-linux-gnu/bits/huge_valf.h \
+  /usr/include/i386-linux-gnu/bits/huge_vall.h \
+  /usr/include/i386-linux-gnu/bits/inf.h \
+  /usr/include/i386-linux-gnu/bits/nan.h \
+  /usr/include/i386-linux-gnu/bits/mathdef.h \
+  /usr/include/i386-linux-gnu/bits/mathcalls.h \
+  /usr/include/i386-linux-gnu/sys/mman.h \
+  /usr/include/i386-linux-gnu/bits/mman.h \
+  /usr/include/i386-linux-gnu/bits/mman-linux.h
 
 config.h:
 
 /usr/include/stdio.h:
 
-/usr/include/sys/cdefs.h:
+/usr/include/features.h:
 
-/usr/include/sys/_symbol_aliasing.h:
+/usr/include/stdc-predef.h:
 
-/usr/include/sys/_posix_availability.h:
+/usr/include/i386-linux-gnu/sys/cdefs.h:
 
-/usr/include/Availability.h:
+/usr/include/i386-linux-gnu/bits/wordsize.h:
 
-/usr/include/AvailabilityInternal.h:
+/usr/include/i386-linux-gnu/gnu/stubs.h:
 
-/usr/include/_types.h:
+/usr/include/i386-linux-gnu/gnu/stubs-32.h:
 
-/usr/include/sys/_types.h:
+/usr/bin/../lib/clang/3.4/include/stddef.h:
 
-/usr/include/machine/_types.h:
+/usr/include/i386-linux-gnu/bits/types.h:
 
-/usr/include/i386/_types.h:
+/usr/include/i386-linux-gnu/bits/typesizes.h:
 
-/usr/include/secure/_stdio.h:
+/usr/include/libio.h:
 
-/usr/include/secure/_common.h:
+/usr/include/_G_config.h:
+
+/usr/include/wchar.h:
+
+/usr/bin/../lib/clang/3.4/include/stdarg.h:
+
+/usr/include/i386-linux-gnu/bits/stdio_lim.h:
+
+/usr/include/i386-linux-gnu/bits/sys_errlist.h:
 
 /usr/include/fcntl.h:
 
-/usr/include/sys/fcntl.h:
+/usr/include/i386-linux-gnu/bits/fcntl.h:
+
+/usr/include/i386-linux-gnu/bits/fcntl-linux.h:
+
+/usr/include/time.h:
+
+/usr/include/i386-linux-gnu/bits/stat.h:
 
 /usr/include/stdlib.h:
 
-/usr/include/sys/wait.h:
+/usr/include/i386-linux-gnu/bits/waitflags.h:
 
-/usr/include/sys/signal.h:
+/usr/include/i386-linux-gnu/bits/waitstatus.h:
 
-/usr/include/sys/appleapiopts.h:
+/usr/include/endian.h:
 
-/usr/include/machine/signal.h:
+/usr/include/i386-linux-gnu/bits/endian.h:
 
-/usr/include/i386/signal.h:
+/usr/include/i386-linux-gnu/bits/byteswap.h:
 
-/usr/include/i386/_structs.h:
+/usr/include/i386-linux-gnu/bits/byteswap-16.h:
 
-/usr/include/sys/_structs.h:
+/usr/include/i386-linux-gnu/sys/types.h:
 
-/usr/include/machine/_structs.h:
+/usr/include/i386-linux-gnu/sys/select.h:
 
-/usr/include/mach/i386/_structs.h:
+/usr/include/i386-linux-gnu/bits/select.h:
 
-/usr/include/sys/resource.h:
+/usr/include/i386-linux-gnu/bits/sigset.h:
 
-/usr/include/machine/endian.h:
+/usr/include/i386-linux-gnu/bits/time.h:
 
-/usr/include/i386/endian.h:
+/usr/include/i386-linux-gnu/sys/sysmacros.h:
 
-/usr/include/sys/_endian.h:
-
-/usr/include/libkern/_OSByteOrder.h:
-
-/usr/include/libkern/i386/_OSByteOrder.h:
+/usr/include/i386-linux-gnu/bits/pthreadtypes.h:
 
 /usr/include/alloca.h:
 
-/usr/include/machine/types.h:
-
-/usr/include/i386/types.h:
+/usr/include/i386-linux-gnu/bits/stdlib-float.h:
 
 /usr/include/unistd.h:
 
-/usr/include/sys/unistd.h:
+/usr/include/i386-linux-gnu/bits/posix_opt.h:
 
-/usr/include/sys/select.h:
+/usr/include/i386-linux-gnu/bits/environments.h:
 
-/usr/include/sys/_select.h:
+/usr/include/i386-linux-gnu/bits/confname.h:
 
 /usr/include/getopt.h:
 
 /usr/include/string.h:
 
-/usr/include/strings.h:
+/usr/include/xlocale.h:
 
-/usr/include/secure/_string.h:
-
-/usr/include/sys/types.h:
-
-/usr/include/sys/time.h:
-
-/usr/include/time.h:
-
-/usr/include/_structs.h:
-
-/usr/include/sys/stat.h:
+/usr/include/i386-linux-gnu/sys/wait.h:
 
 /usr/include/signal.h:
 
+/usr/include/i386-linux-gnu/bits/signum.h:
+
+/usr/include/i386-linux-gnu/bits/siginfo.h:
+
+/usr/include/i386-linux-gnu/bits/sigaction.h:
+
+/usr/include/i386-linux-gnu/bits/sigcontext.h:
+
+/usr/include/i386-linux-gnu/bits/sigstack.h:
+
+/usr/include/i386-linux-gnu/sys/ucontext.h:
+
+/usr/include/i386-linux-gnu/bits/sigthread.h:
+
+/usr/include/i386-linux-gnu/sys/time.h:
+
+/usr/include/i386-linux-gnu/sys/stat.h:
+
 /usr/include/errno.h:
 
-/usr/include/sys/errno.h:
+/usr/include/i386-linux-gnu/bits/errno.h:
+
+/usr/include/linux/errno.h:
+
+/usr/include/i386-linux-gnu/asm/errno.h:
+
+/usr/include/asm-generic/errno.h:
+
+/usr/include/asm-generic/errno-base.h:
 
 /usr/include/inttypes.h:
 
-/usr/bin/../lib/clang/4.2/include/stdint.h:
+/usr/bin/../lib/clang/3.4/include/stdint.h:
+
+/usr/bin/../lib/gcc/i686-linux-gnu/4.8/include/stdint.h:
 
 /usr/include/stdint.h:
 
-/usr/include/ctype.h:
+/usr/include/i386-linux-gnu/bits/wchar.h:
 
-/usr/include/runetype.h:
+/usr/include/ctype.h:
 
 /usr/include/regex.h:
 
-/usr/bin/../lib/clang/4.2/include/stdarg.h:
+/usr/include/i386-linux-gnu/gnu/option-groups.h:
 
 /usr/include/math.h:
 
-/usr/include/sys/mman.h:
+/usr/include/i386-linux-gnu/bits/huge_val.h:
+
+/usr/include/i386-linux-gnu/bits/huge_valf.h:
+
+/usr/include/i386-linux-gnu/bits/huge_vall.h:
+
+/usr/include/i386-linux-gnu/bits/inf.h:
+
+/usr/include/i386-linux-gnu/bits/nan.h:
+
+/usr/include/i386-linux-gnu/bits/mathdef.h:
+
+/usr/include/i386-linux-gnu/bits/mathcalls.h:
+
+/usr/include/i386-linux-gnu/sys/mman.h:
+
+/usr/include/i386-linux-gnu/bits/mman.h:
+
+/usr/include/i386-linux-gnu/bits/mman-linux.h:
