--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,2 @@
-Lookbusy is by Devin Carraway <lookbusy@devin.com>.
-
+Lookbusy is by Devin Carraway <lookbusy@devin.com>,
+Prateek Sharma <prateeks@cs.umass.edu>
